Added fixed link up

--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
         </div>
       </div>
     </section>
+    <a href="#anchor">
+      <div class="fixed-back-link">
+        <img src="img/arrow.svg" alt="arrow" />
+      </div>
+    </a>
   </body>
   <footer class="footer">
     <div class="container">
@@ -203,7 +208,7 @@
       <hr class="footer-hr" />
 
       <div class="row">
-        <div class="col-lg-3 col-md-3 col-xs-12">
+        <div class="col-lg-3 col-md-3 col-xs-7">
           <div class="footer-item drop-list">
             <select class="select" name="ln" id="ln">
               <option value="Russian">Русский</option>
