--- a/restront.html
+++ b/restront.html
@@ -39,29 +39,7 @@
       </div>
     </header>
 
-    <!-- MAIN BANNER -->
-
-    <!-- <section class="first-banner">
-      <div class="img-container">
-        <div class="card-parent">
-          <div class="col-xs-7 col-md-5 col-lg-5">
-            <div class="rest-card">
-              <h2 class="card-title">Pub Pushkin</h2>
-              <div class="card-content">
-                <p>₽₽₽ • Европейская</p>
-                <div class="delivary-time">
-                  <div class="background-time">
-                    <p>40-50 min</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <section class="cafe-hero">
+    <section class="cafe-hero" id="anchor">
       <div class="img-container">
         <img src="img/main-banner.png" alt="Трактир «Пушкин»" />
       </div>
@@ -246,7 +224,7 @@
         <hr class="footer-hr" />
 
         <div class="row">
-          <div class="col-lg-3 col-md-3 col-xs-12">
+          <div class="col-lg-3 col-md-3 col-xs-7">
             <div class="footer-item drop-list">
               <select class="select" name="ln" id="ln">
                 <option value="Russian">Русский</option>
@@ -310,5 +288,11 @@
         </div>
       </div>
     </footer>
+
+    <a href="#anchor">
+      <div class="fixed-back-link">
+        <img src="img/arrow.svg" alt="arrow" />
+      </div>
+    </a>
   </body>
 </html>
