--- a/restront.html
+++ b/restront.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="container header-container">
         <div class="header-logo">
-          <a href="#">
+          <a href="index.html">
             <img src="img/logo.svg" alt="Logo" />
           </a>
         </div>
