--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="row between-xs">
             <!-- FIRST CARD -->
             <div class="col-lg-4 col-md-6 col-xs-12">
-              <a href="#">
+              <a href="restront.html">
                 <div class="card">
                   <div class="card-img">
                     <img src="img/mc.png" alt="Proto" />
@@ -74,7 +74,7 @@
             </div>
             <!-- SECOND CARD -->
             <div class="col-lg-4 col-md-6 col-xs-12">
-              <a href="#">
+              <a href="restront.html">
                 <div class="card">
                   <div class="card-img">
                     <img src="img/photo-1.png" alt="Proto" />
@@ -91,7 +91,7 @@
             <!-- 3 CARD -->
 
             <div class="col-lg-4 col-md-6 col-xs-12">
-              <a href="#">
+              <a href="restront.html">
                 <div class="card">
                   <div class="card-img">
                     <img src="img/photo.png" alt="Proto" />
@@ -105,7 +105,7 @@
 
             <!-- 4 CARD -->
             <div class="col-lg-4 col-md-6 col-xs-12">
-              <a href="#">
+              <a href="restront.html">
                 <div class="card">
                   <div class="card-img">
                     <img src="img/photo-2.png" alt="Proto" />
@@ -118,7 +118,7 @@
             </div>
             <!-- 5 CARD -->
             <div class="col-lg-4 col-md-6 col-xs-12">
-              <a href="#">
+              <a href="restront.html">
                 <div class="card">
                   <div class="card-img">
                     <img src="img/photo-3.png" alt="Proto" />
@@ -133,7 +133,7 @@
             <!-- 6 CARD -->
 
             <div class="col-lg-4 col-md-6 col-xs-12">
-              <a href="#">
+              <a href="restront.html">
                 <div class="card">
                   <div class="card-img">
                     <img src="img/photo-4.png" alt="Proto" />
@@ -149,7 +149,7 @@
 
             <!-- 7 CARD -->
             <div class="col-lg-4 col-md-6 col-xs-12">
-              <a href="#">
+              <a href="restront.html">
                 <div class="card">
                   <div class="card-img">
                     <img src="img/photo-5.png" alt="Proto" />
@@ -162,7 +162,7 @@
             </div>
             <!-- 8 CARD -->
             <div class="col-lg-4 col-md-6 col-xs-12">
-              <a href="#">
+              <a href="restront.html">
                 <div class="card">
                   <div class="card-img">
                     <img src="img/photo-6.png" alt="Proto" />
