Fixed back ling

--- a/restront.html
+++ b/restront.html
@@ -289,7 +289,7 @@
       </div>
     </footer>
 
-    <a href="#anchor">
+    <a href="#">
       <div class="fixed-back-link">
         <img src="img/arrow.svg" alt="arrow" />
       </div>
