--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
       </div>
     </section>
-    <a href="#anchor">
+    <a href="#">
       <div class="fixed-back-link">
         <img src="img/arrow.svg" alt="arrow" />
       </div>
